syntax = "proto3";

package myproject.bazel;

// Import the proto files from Bazel
import "src/main/protobuf/build.proto";
import "src/main/protobuf/spawn.proto";
import "src/main/java/com/google/devtools/build/lib/buildeventstream/proto/build_event_stream.proto";

// Example message that uses Bazel's proto types
message BazelBuildInfo {
  // Reference to a Bazel build event
  build_event_stream.BuildEvent build_event = 1;
  
  // Reference to spawn information (from spawn.proto in tools.protos package)
  tools.protos.ExecLogEntry.Spawn spawn_info = 2;
  
  // Custom fields
  string workspace_name = 3;
  repeated string targets = 4;
}

message BazelTargetInfo {
  // Reference to Bazel's Target type (from build.proto in blaze_query package)
  blaze_query.Target target = 1;

  // Additional metadata
  string package_name = 2;
  map<string, string> attributes = 3;
}
