syntax = "proto3";

package gazel.api.v1;

option go_package = "github.com/jspears/gazel/api/v1;gazelv1";

import "google/protobuf/timestamp.proto";

// ============================================================================
// Core Types
// ============================================================================

message WorkspaceInfo {
  string path = 1;
  string name = 2;
  bool valid = 3;
  string error = 4;
  repeated string packages = 5;
  int32 target_count = 6;
  int32 file_count = 7;
}

message BazelTarget {
  string label = 1;
  string kind = 2;
  string package = 3;
  string name = 4;
  repeated string tags = 5;
  repeated string deps = 6;
  repeated string srcs = 7;
  map<string, string> attributes = 8;
  string visibility = 9;
  bool testonly = 10;
}

message BuildFile {
  string path = 1;
  string package = 2;
  repeated BazelTarget targets = 3;
  int32 line_count = 4;
  int64 size_bytes = 5;
  google.protobuf.Timestamp modified_time = 6;
}

message QueryTemplate {
  string id = 1;
  string name = 2;
  string description = 3;
  string template = 4;
  repeated string parameters = 5;
  string category = 6;
}

message SavedQuery {
  string id = 1;
  string name = 2;
  string query = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CommandHistory {
  string id = 1;
  string command = 2;
  repeated string args = 3;
  bool success = 4;
  string output = 5;
  string error = 6;
  google.protobuf.Timestamp executed_at = 7;
  int64 duration_ms = 8;
}

message Module {
  string key = 1;
  string name = 2;
  string version = 3;
  Location location = 4;
  int32 compatibility_level = 5;
  string repo_name = 6;
  repeated string bazel_compatibility = 7;
  bool module_rule_exports_all_rules = 8;
  repeated string tags = 9;
  repeated Dependency dependencies = 10;
  repeated Dependency resolved_dependencies = 11;
  repeated ExtensionUsage extension_usages = 12;
  int32 dependency_count = 13;
  int32 extension_count = 14;
}

message Location {
  string file = 1;
  int32 line = 2;
  int32 column = 3;
}

message Dependency {
  string key = 1;
  string name = 2;
  string version = 3;
  bool dev_dependency = 4;
  string registry = 5;
}

message ExtensionUsage {
  string extension_bzl_file = 1;
  string extension_name = 2;
  Location location = 3;
  map<string, string> imports = 4;
  bool dev_dependency = 5;
  bool isolate = 6;
}

message ModuleDependency {
  string from = 1;
  string to = 2;
  string type = 3; // "direct", "dev", "indirect"
  string version = 4;
}

// ============================================================================
// Service Messages
// ============================================================================

// Workspace Service Messages
message GetWorkspaceInfoRequest {}
message GetWorkspaceInfoResponse {
  WorkspaceInfo info = 1;
}

message GetCurrentWorkspaceRequest {}
message GetCurrentWorkspaceResponse {
  bool configured = 1;
  string workspace = 2;
  bool valid = 3;
  string error = 4;
}

message ScanWorkspacesRequest {}
message ScanWorkspacesResponse {
  message Workspace {
    string path = 1;
    string name = 2;
    string type = 3; // "current", "parent", "home", "discovered"
  }
  repeated Workspace workspaces = 1;
}

message SwitchWorkspaceRequest {
  string workspace = 1;
}
message SwitchWorkspaceResponse {
  bool success = 1;
  string workspace = 2;
  string message = 3;
}

// Target Service Messages
message ListTargetsRequest {
  string pattern = 1;
  string format = 2;
}
message ListTargetsResponse {
  int32 total = 1;
  repeated BazelTarget targets = 2;
  map<string, TargetList> by_package = 3;
}

message TargetList {
  repeated BazelTarget targets = 1;
}

message GetTargetRequest {
  string target = 1;
}
message GetTargetResponse {
  BazelTarget target = 1;
}

message GetTargetDependenciesRequest {
  string target = 1;
  int32 depth = 2;
}
message GetTargetDependenciesResponse {
  string target = 1;
  int32 depth = 2;
  int32 total = 3;
  repeated BazelTarget dependencies = 4;
}

message GetTargetOutputsRequest {
  string target = 1;
}
message GetTargetOutputsResponse {
  string target = 1;
  repeated string outputs = 2;
  int32 count = 3;
}

message GetReverseDependenciesRequest {
  string target = 1;
}
message GetReverseDependenciesResponse {
  string target = 1;
  int32 total = 2;
  repeated BazelTarget dependencies = 3;
}

message SearchTargetsRequest {
  string query = 1;
  string type = 2;
  string package = 3;
}
message SearchTargetsResponse {
  string query = 1;
  int32 total = 2;
  repeated BazelTarget targets = 3;
}

// Query Service Messages
message ExecuteQueryRequest {
  string query = 1;
  string output_format = 2;
}
message ExecuteQueryResponse {
  string query = 1;
  string output_format = 2;
  QueryResult result = 3;
  string raw = 4;
}

message QueryResult {
  repeated BazelTarget targets = 1;
}

message StreamQueryRequest {
  string query = 1;
  string output_format = 2;
  bool parse_xml = 3;
}
message StreamQueryResponse {
  oneof data {
    BazelTarget target = 1;
    string raw_line = 2;
    string error = 3;
  }
}

// Command Service Messages
message BuildTargetRequest {
  string target = 1;
  repeated string options = 2;
}
message BuildTargetResponse {
  bool success = 1;
  string output = 2;
  string stderr = 3;
  string error = 4;
}

message StreamBuildRequest {
  string target = 1;
  repeated string options = 2;
}
message StreamBuildResponse {
  oneof event {
    string output = 1;
    string error = 2;
    BuildProgress progress = 3;
    BuildComplete complete = 4;
  }
}

message BuildProgress {
  int32 actions_completed = 1;
  int32 actions_total = 2;
  string current_action = 3;
}

message BuildComplete {
  bool success = 1;
  int32 exit_code = 2;
  int64 duration_ms = 3;
}

// Module Service Messages
message GetModuleGraphRequest {}
message GetModuleGraphResponse {
  string root = 1;
  repeated Module modules = 2;
  repeated ModuleDependency dependencies = 3;
  ModuleStatistics statistics = 4;
}

message ModuleStatistics {
  int32 total_modules = 1;
  int32 direct_dependencies = 2;
  int32 dev_dependencies = 3;
  int32 indirect_dependencies = 4;
}

// ============================================================================
// Services
// ============================================================================

service GazelService {
  // Workspace operations
  rpc GetWorkspaceInfo(GetWorkspaceInfoRequest) returns (GetWorkspaceInfoResponse);
  rpc GetCurrentWorkspace(GetCurrentWorkspaceRequest) returns (GetCurrentWorkspaceResponse);
  rpc ScanWorkspaces(ScanWorkspacesRequest) returns (ScanWorkspacesResponse);
  rpc SwitchWorkspace(SwitchWorkspaceRequest) returns (SwitchWorkspaceResponse);
  
  // Target operations
  rpc ListTargets(ListTargetsRequest) returns (ListTargetsResponse);
  rpc GetTarget(GetTargetRequest) returns (GetTargetResponse);
  rpc GetTargetDependencies(GetTargetDependenciesRequest) returns (GetTargetDependenciesResponse);
  rpc GetTargetOutputs(GetTargetOutputsRequest) returns (GetTargetOutputsResponse);
  rpc GetReverseDependencies(GetReverseDependenciesRequest) returns (GetReverseDependenciesResponse);
  rpc SearchTargets(SearchTargetsRequest) returns (SearchTargetsResponse);
  
  // Query operations
  rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse);
  rpc StreamQuery(StreamQueryRequest) returns (stream StreamQueryResponse);
  
  // Build operations
  rpc BuildTarget(BuildTargetRequest) returns (BuildTargetResponse);
  rpc StreamBuild(StreamBuildRequest) returns (stream StreamBuildResponse);
  
  // Module operations
  rpc GetModuleGraph(GetModuleGraphRequest) returns (GetModuleGraphResponse);
}
